updates multiple select content to match component api

--- a/ui/controls/docker-environment-input.reel/docker-environment-input.html
+++ b/ui/controls/docker-environment-input.reel/docker-environment-input.html
@@ -35,7 +35,8 @@
             "properties": {
                 "element": {"#": "variable"},
                 "converter": {"@": "variableConverter"},
-                "label": "Variable"
+                "label": "Variable",
+                "placeholder": "eg. FOO"
             }
         },
 
@@ -44,7 +45,8 @@
             "properties": {
                 "element": {"#": "value"},
                 "converter": {"@": "trimConverter"},
-                "label": "Value"
+                "label": "Value",
+                "placeholder": "eg. BAR"
             }
         }
     }
