--- a/ui/controls/docker-port-input.reel/docker-port-input.html
+++ b/ui/controls/docker-port-input.reel/docker-port-input.html
@@ -10,7 +10,7 @@
                 "hostPortComponent": {"@": "hostPort"},
                 "protocolsComponent": {"@": "protocols"},
                 "containerPortComponent": {"@": "containerPort"}
-            }  
+            }
         },
 
         "portValidator": {
@@ -34,7 +34,7 @@
             "properties": {
                 "element": {"#": "hostPort"},
                 "converter": {"@": "portConverter"},
-                "placeholderValue": "8000",
+                "placeholder": "8000",
                 "label": "Host Port"
             }
         },
@@ -44,7 +44,7 @@
             "properties": {
                 "element": {"#": "containerPort"},
                 "converter": {"@": "portConverter"},
-                "placeholderValue": "8000",
+                "placeholder": "8000",
                 "label": "Container Port"
             }
         },
