--- a/ui/controls/docker-volumes-input.reel/docker-volumes-input.html
+++ b/ui/controls/docker-volumes-input.reel/docker-volumes-input.html
@@ -12,12 +12,13 @@
                 "readOnlyComponent": {"@": "readOnly"}
             }
         },
-        
+
         "hostPath": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "hostPath"},
-                "label": "Host Path"
+                "label": "Host Path",
+                "placeholder": "insert host path"
             }
         },
 
@@ -25,7 +26,8 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "containerPath"},
-                "label": "Container Path"
+                "label": "Container Path",
+                "placeholder": "insert container path"
             }
         },
 
