--- a/ui/inspectors/service.reel/dyndns-service.reel/dyndns-service.html
+++ b/ui/inspectors/service.reel/dyndns-service.reel/dyndns-service.html
@@ -39,7 +39,10 @@
                 "label": "Domains",
                 "labelPath": "this",
                 "isDraggable": true,
-                "placeholderValue": "eg. mydomain.ddnsprovider.net"
+                "placeholder": "eg. mydomain.ddnsprovider.net",
+                "inputTitle": "Add a domain",
+                "valuesTitle": "Added domains",
+                "emptyMessage": "no domains added :("
             },
             "bindings": {
                 "values": {"<->": "@owner.object.domains"}
