--- a/ui/inspectors/service.reel/iscsi-service.reel/iscsi-service.html
+++ b/ui/inspectors/service.reel/iscsi-service.reel/iscsi-service.html
@@ -51,7 +51,11 @@
                 "element": {"#": "iSNS_Servers"},
                 "label": "ISNS Servers",
                 "labelPath": "this",
-                "isDraggable": true
+                "isDraggable": true,
+                "placeholder": "",
+                "inputTitle": "Add an ISNS server",
+                "valuesTitle": "Added serves",
+                "emptyMessage": "no servers added :("
             },
             "bindings": {
                 "values": {"<->": "@owner.object.isns_servers"},
