--- a/ui/inspectors/service.reel/nfs-service.reel/nfs-service.html
+++ b/ui/inspectors/service.reel/nfs-service.reel/nfs-service.html
@@ -42,7 +42,10 @@
             "properties": {
                 "element": {"#": "bind_addresses"},
                 "label": "Bind IP Addresses",
-                "placeholderValue": "eg. 1.2.3.4"
+                "placeholder": "eg. 1.2.3.4",
+                "inputTitle": "Add an IP address",
+                "valuesTitle": "Added IP addresses",
+                "emptyMessage": "No IP addresses added :("
             },
             "bindings": {
                 "values": {"<->": "@owner.object.bind_addresses"}
