--- a/ui/inspectors/service.reel/webdav-service.reel/webdav-service.html
+++ b/ui/inspectors/service.reel/webdav-service.reel/webdav-service.html
@@ -24,7 +24,10 @@
                 "label": "Protocols",
                 "labelPath": "this",
                 "isDraggable": true,
-                "placeholderValue": "Select a protocol"
+                "placeholder": "Select a protocol",
+                "inputTitle": "Add a Protocol",
+                "valuesTitle": "Added Protocols",
+                "emptyMessage": "No Protocols added :("
             },
             "bindings": {
                 "options": {"<-": "@owner.PROTOCOL_OPTIONS"},
