--- a/ui/inspectors/system-section.reel/system.reel/system.html
+++ b/ui/inspectors/system-section.reel/system.reel/system.html
@@ -35,7 +35,11 @@
             "properties": {
                 "element": {"#": "tags"},
                 "label": "Tags",
-                "labelPath": "this"
+                "labelPath": "this",
+                "inputTitle": "Add a tag",
+                "valuesTitle": "Added tags",
+                "placeholder": "tagname...",
+                "emptyMessage": "no tags added :("
             },
             "bindings": {
                 "values": {"<->": "@owner.systemGeneralData.tags"}
