--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -166,7 +166,9 @@
             "properties": {
                 "element": {"#": "ports"},
                 "label": "Ports",
+                "inputTitle": "Add a port",
                 "valuesTitle": "Added Ports",
+                "emptyMessage": "No ports added :(",
                 "labelPath": "this",
                 "disabled": true
             },
@@ -181,7 +183,9 @@
             "properties": {
                 "element": {"#": "volumes"},
                 "label": "Volumes",
+                "inputTitle": "Add a volume",
                 "valuesTitle": "Added Volumes",
+                "emptyMessage": "No volumes added :(",
                 "labelPath": "this",
                 "disabled": true
             },
