--- a/ui/sections/containers/inspectors/docker-image.reel/docker-image.html
+++ b/ui/sections/containers/inspectors/docker-image.reel/docker-image.html
@@ -19,7 +19,7 @@
                 "pattern": "MM/dd/yyyy hh:mm:ss tt"
             }
         },
-        
+
         "inspector": {
             "prototype": "ui/inspectors/inspector.reel",
             "properties": {
@@ -89,6 +89,7 @@
                 "element": {"#": "hosts"},
                 "controller": {"@": "owner"},
                 "label": "Hosts",
+                "placeholder": "",
                 "inputTitle": "Install image",
                 "valuesTitle": "Image installed on hosts",
                 "emptyMessage": "Image installed on no hosts :("
