--- a/ui/sections/network/inspectors/network-interface.reel/network-interface.html
+++ b/ui/sections/network/inspectors/network-interface.reel/network-interface.html
@@ -201,12 +201,13 @@
                 "inputTitle": "Add Aliases",
                 "valuesTitle": "Added Aliases",
                 "labelPath": "address + '/' + netmask",
+                "emptyMessage": "no aliases added",
                 "inputErrorMessage": "Please enter a valid IP address and netmask."
             },
             "bindings": {
                 "values": {"<->": "@owner.object._otherAliases"},
                 "disabled": {"<-": "@owner.object.dhcp"},
-                "placeholderValue": {"<-": "!@owner.object.dhcp ? 'eg. 1.2.3.4/16' : ''"}
+                "placeholder": {"<-": "!@owner.object.dhcp ? 'eg. 1.2.3.4/16' : ''"}
             }
         }
     }
