--- a/ui/inspectors/share.reel/nfs-share.reel/nfs-share.html
+++ b/ui/inspectors/share.reel/nfs-share.reel/nfs-share.html
@@ -62,11 +62,14 @@
             "properties": {
                 "element": {"#": "hosts"},
                 "labelPath": "this",
-                "label": "Authorized hosts"
+                "label": "Authorized hosts",
+                "inputTitle": "Add Authorized Host",
+                "valuesTitle": "Athorized Hosts",
+                "emptyMessage": "No authorized hosts"
             },
             "bindings": {
                 "values": {"<->": "@owner.properties.hosts"},
-                "placeholderValue": {"<-": "'eg. 1.2.3.4 or hostname'"}
+                "placeholder": {"<-": "'eg. 1.2.3.4 or hostname'"}
             }
         },
         "maprootUser": {
@@ -123,7 +126,11 @@
                 "element": {"#": "security"},
                 "isDraggable": true,
                 "labelPath": "this",
-                "label": "NFS v4 Security"
+                "label": "NFS v4 Security",
+                "placeholder": "",
+                "inputTitle": "Add Security Items",
+                "valuesTitle": "Secturity Items",
+                "emptyMessage": "No secturity items added"
             },
             "bindings": {
                 "values": {"<->": "@owner.properties.security"},
