cleans up spacing in network overview

--- a/ui/controls/viewer.reel/viewer.html
+++ b/ui/controls/viewer.reel/viewer.html
@@ -61,7 +61,7 @@
                 "element": {"#": "title"}
             },
             "bindings": {
-                "value": {"<-": "@owner.object._meta_data.collectionModelType.constructor.userInterfaceDescriptor.collectionNameExpression"}
+                "value": {"<-": "@owner.object._meta_data.collectionModelType.constructor.userInterfaceDescriptor.collectionNameExpression.slice(1,-1)"}
             }
         }
     }
