--- a/ui/sections/network/inspectors/overview.reel/overview.html
+++ b/ui/sections/network/inspectors/overview.reel/overview.html
@@ -122,10 +122,10 @@
 
                     <div data-montage-id="nameserversSectionTitle"></div>
                     <div data-montage-id="nameserverRepetition">
-                        <div data-montage-id="nameserver"></div>
+                        <div data-montage-id="nameserver" class="Overview-listItem"></div>
                     </div>
 
-                    <div data-montage-id="defaultRouteSectionTitle"></div>
+                    <div data-montage-id="defaultRouteSectionTitle" class="flush-bottom"></div>
                     <div data-montage-id="defaultRouteIpv4"></div>
                     <div data-montage-id="defaultRouteIpv6"></div>
 
