--- a/ui/controls/field-treeview.reel/field-treeview.html
+++ b/ui/controls/field-treeview.reel/field-treeview.html
@@ -42,7 +42,7 @@
             },
             "bindings": {
                 "disabled": {"<-": "@owner.disabled || @owner.readOnly"},
-                "value": {"<-": "(@owner.selectedPath + (!!@owner.suffix ? '/' + @owner.suffix : '')).replace(@owner.removePrefix || '', '')"},
+                "value": {"<-": "!@owner.selectedPath ? 'none' : (@owner.selectedPath + (!!@owner.suffix ? '/' + @owner.suffix : '')).replace(@owner.removePrefix || '', '')"},
                 "disabled": {"<-": "@owner.isExpanded"},
                 "delegate": {"<-": "@owner.pathInputDelegate"}
             }
