freenas type credential

--- a/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
+++ b/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
@@ -17,37 +17,52 @@
                 "label": "Address"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.address"}
+                "value": {"<->": "@owner.object.credentials.address"}
+            }
+        },
+        "portConverterValidator": {
+            "prototype": "core/converter/validator/integer-range-validator",
+            "properties": {
+                "floor": 0,
+                "errorMessage": "Value must be an integer"
+            }
+        },
+        "numberConverter": {
+            "prototype": "core/converter/string-to-integer-converter",
+            "properties": {
+                "validator": {"@": "portConverterValidator"}
             }
         },
         "port": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "port"},
-                "label": "Port"
+                "label": "Port",
+                "converter": {"@": "numberConverter"}
             },
             "bindings": {
-                "value": {"<->": "@owner.object.port"}
+                "value": {"<->": "@owner.object.credentials.port"}
             }
         },
-        "pubkey": {
-            "prototype": "blue-shark/ui/field-text-area.reel",
+        "username": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
-                "element": {"#": "pubkey"},
-                "label": "Public key"
+                "element": {"#": "username"},
+                "label": "Username"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.pubkey"}
+                "value": {"<->": "@owner.object.credentials.username"}
             }
         },
-        "hostkey": {
-            "prototype": "blue-shark/ui/field-text-area.reel",
+        "password": {
+            "prototype": "blue-shark/ui/field-password.reel",
             "properties": {
-                "element": {"#": "hostkey"},
-                "label": "Host key"
+                "element": {"#": "password"},
+                "label": "Password",
+                "label2": "Confirm password"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.hostkey"}
+                "value": {"<->": "@owner.object.credentials.password"}
             }
         }
     }
@@ -57,8 +72,8 @@
     <div data-montage-id="owner" class="FreenasCredentials">
         <div data-montage-id="address"></div>
         <div data-montage-id="port"></div>
-        <div data-montage-id="pubkey"></div>
-        <div data-montage-id="hostkey"></div>
+        <div data-montage-id="username"></div>
+        <div data-montage-id="password"></div>
     </div>
 </body>
 </html>
