--- a/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
+++ b/ui/sections/peering/inspectors/ssh-credentials.reel/ssh-credentials.html
@@ -34,11 +34,10 @@
             "prototype": "blue-shark/ui/field-password.reel",
             "properties": {
                 "element": {"#": "password"},
-                "label": "Password",
-                "label2": "Confirm"
+                "label": "Password"
             },
             "bindings": {
-                "value": {"<->": "@owner.password"}
+                "value": {"<->": "@owner.object.password"}
             }
         },
         "pubkey": {
