--- a/ui/sections/containers/inspectors/docker-image-pull.reel/docker-image-pull.html
+++ b/ui/sections/containers/inspectors/docker-image-pull.reel/docker-image-pull.html
@@ -25,7 +25,7 @@
                 "controller": {"@": "owner"}
             },
             "bindings": {
-                "canSave": {"<-": "!!@owner._selectedImage && !!@owner._selectedHost"},
+                "isSaveDisabled": {"<-": "!@owner._selectedImage || !@owner._selectedHost"},
                 "context": {"<-": "@owner.context"}
             }
         },
