ADDED: name field

--- a/ui/sections/peering/inspectors/amazon-s3-credentials.reel/amazon-s3-credentials.html
+++ b/ui/sections/peering/inspectors/amazon-s3-credentials.reel/amazon-s3-credentials.html
@@ -10,24 +10,14 @@
                 "element": {"#": "owner"}
             }
         },
-        "region": {
+        "name": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
-                "element": {"#": "region"},
-                "label": "region"
+                "element": {"#": "name"},
+                "label": "Name"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.region"}
-            }
-        },
-        "folder": {
-            "prototype": "blue-shark/ui/field-text-input.reel",
-            "properties": {
-                "element": {"#": "folder"},
-                "label": "folder"
-            },
-            "bindings": {
-                "value": {"<->": "@owner.object.folder"}
+                "value": {"<->": "@owner.object.name"}
             }
         },
         "bucket": {
@@ -37,7 +27,7 @@
                 "label": "bucket"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.bucket"}
+                "value": {"<->": "@owner.object.credentials.bucket"}
             }
         },
         "access_key": {
@@ -47,7 +37,7 @@
                 "label": "access_key"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.access_key"}
+                "value": {"<->": "@owner.object.credentials.access_key"}
             }
         },
         "secret_key": {
@@ -57,7 +47,7 @@
                 "label": "secret_key"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.secret_key"}
+                "value": {"<->": "@owner.object.credentials.secret_key"}
             }
         }
     }
@@ -65,8 +55,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="AmazonS3Credentials">
-        <div data-montage-id="region"></div>
-        <div data-montage-id="folder"></div>
+        <div data-montage-id="name"></div>
         <div data-montage-id="bucket"></div>
         <div data-montage-id="access_key"></div>
         <div data-montage-id="secret_key"></div>
